@@ -1045,6 +1045,40 @@
 #define GR_GL_INCLUSIVE                                     0x8f10
 #define GR_GL_EXCLUSIVE                                     0x8f11
 
+/** GL_QCOM_tiled_rendering */
+#define GR_GL_COLOR_BUFFER_BIT0                             0x00000001
+#define GR_GL_COLOR_BUFFER_BIT1                             0x00000002
+#define GR_GL_COLOR_BUFFER_BIT2                             0x00000004
+#define GR_GL_COLOR_BUFFER_BIT3                             0x00000008
+#define GR_GL_COLOR_BUFFER_BIT4                             0x00000010
+#define GR_GL_COLOR_BUFFER_BIT5                             0x00000020
+#define GR_GL_COLOR_BUFFER_BIT6                             0x00000040
+#define GR_GL_COLOR_BUFFER_BIT7                             0x00000080
+#define GR_GL_DEPTH_BUFFER_BIT0                             0x00000100
+#define GR_GL_DEPTH_BUFFER_BIT1                             0x00000200
+#define GR_GL_DEPTH_BUFFER_BIT2                             0x00000400
+#define GR_GL_DEPTH_BUFFER_BIT3                             0x00000800
+#define GR_GL_DEPTH_BUFFER_BIT4                             0x00001000
+#define GR_GL_DEPTH_BUFFER_BIT5                             0x00002000
+#define GR_GL_DEPTH_BUFFER_BIT6                             0x00004000
+#define GR_GL_DEPTH_BUFFER_BIT7                             0x00008000
+#define GR_GL_STENCIL_BUFFER_BIT0                           0x00010000
+#define GR_GL_STENCIL_BUFFER_BIT1                           0x00020000
+#define GR_GL_STENCIL_BUFFER_BIT2                           0x00040000
+#define GR_GL_STENCIL_BUFFER_BIT3                           0x00080000
+#define GR_GL_STENCIL_BUFFER_BIT4                           0x00100000
+#define GR_GL_STENCIL_BUFFER_BIT5                           0x00200000
+#define GR_GL_STENCIL_BUFFER_BIT6                           0x00400000
+#define GR_GL_STENCIL_BUFFER_BIT7                           0x00800000
+#define GR_GL_MULTISAMPLE_BUFFER_BIT0                       0x01000000
+#define GR_GL_MULTISAMPLE_BUFFER_BIT1                       0x02000000
+#define GR_GL_MULTISAMPLE_BUFFER_BIT2                       0x04000000
+#define GR_GL_MULTISAMPLE_BUFFER_BIT3                       0x08000000
+#define GR_GL_MULTISAMPLE_BUFFER_BIT4                       0x10000000
+#define GR_GL_MULTISAMPLE_BUFFER_BIT5                       0x20000000
+#define GR_GL_MULTISAMPLE_BUFFER_BIT6                       0x40000000
+#define GR_GL_MULTISAMPLE_BUFFER_BIT7                       0x80000000
+
 /* GL_ARB_sync */
 #define GR_GL_SYNC_GPU_COMMANDS_COMPLETE                    0x9117
 #define GR_GL_ALREADY_SIGNALED                              0x911A
